# training-llm-application-development

./: .env.template  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/advanced_rag/: factory.py
app/agent_design_pattern/: settings.py
app/documentation_agent/: agent.py
app/prompts/: __init__.py  documentation_quality_prompt.py  evaluation_prompts.py  rag_prompts.py
app/rag/: factory.py
core/rag/: factory.py  hyde.py  multi_query.py  rag_fusion.py
data/: documentation_agent_examples.csv  examples.csv
day2/: .env.template  CLAUDE.md  app.py  pyproject.toml
day2-starter/: .env.template  pyproject.toml
day2-starter/.devcontainer/: devcontainer-lock.json
day2/data/: examples.csv  (+1 more)
day3/: .gitattributes  CLAUDE.md
day3-starter/: CLAUDE.md
day3-starter/llm-app/: .env.example  pyproject.toml
day3-starter/llm-app/app/: llm.py  main.py
day3-starter/llm-app/app/generate/nodes/: generate_response.py
day3-starter/llm-app/evals/: upload_dataset.py
day3-starter/llm-app/evals/evaluators/: classification_accuracy.py  forbidden_content_judge.py
docs/: azure_openai.md  azure_opneai.md  get_ready.md  get_ready_basic.md  get_ready_leader.md  setup.md
evals/: __init__.py  eval_day1_5_naive_agent.py
notebooks/: day1_1_llm_app_basics.ipynb  day1_2_langchain_and_rag_basics.ipynb  day2_1_langgraph.ipynb  day2_1_lcel_deep_dive.ipynb  day2_1_setup.ipynb  day2_2_langgraph.ipynb  day2_6_langgraph.ipynb  day2_7_langgraph.ipynb  day3_1_agent_design_pattern.ipynb  day3_1_langgraph.ipynb  day3_4_agent_design_pattern.ipynb  day3_6_agent_design_pattern.ipynb  day3_8_agent_design_pattern.ipynb
pages/: advanced_rag.py  day1_3_indexing.py  day1_3_rag_customize.py  day1_4_rag.py  day1_5_naive_agent.py  day1_5_rag_customize.py  day1_6_naive_agent.py  day2_1_advanced_rag.py  day2_2_advanced_rag.py  day2_2_synthesize_dataset.py  day2_3_evaluation.py  day2_3_synthesize_dataset.py  day2_4_advanced_rag_feedback.py  day2_4_evaluation.py  day2_5_advanced_rag_feedback.py  day2_5_naive_agent.py  day2_6_mcp.py  day2_6_naive_agent.py  day2_7_custom_mcp.py  day2_x_create_dataset.py  day3_1_documentation_agent.py  day3_2_checkpointer.py  day3_2_documentation_agent.py  day3_3_checkpointer.py  day3_3_human_in_the_loop.py  day3_4_agent_inbox.py  day3_4_form.py  day3_4_human_in_the_loop.py  day3_5_form.py  day3_6_agent_inbox.py  day3_7_supervisor.py  day3_x_create_documentation_dataset.py
setup/: README.md  ec2_code_server.md  ec2_code_server.yaml  setup.sh
(+147 files in other folders)
