[project]
name = "training-llm-application-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere==5.20.2",
    "decorator==5.2.1",
    "faiss-cpu==1.13.2",
    "langchain==1.2.7",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.7",
    "langchain-experimental==0.4.1",
    "langchain-openai==1.1.7",
    "langchain-tavily==0.2.17",
    "langchain-text-splitters==1.1.0",
    "langgraph-checkpoint-sqlite==3.0.3",
    "langgraph==1.0.7",
    "nltk==3.9.2",
    "numpy==2.4.1",
    "openai==2.16.0",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.14.3",
    "retry==0.9.2",
    "streamlit-feedback==0.1.4",
    "streamlit==1.53.1",
    "tavily-python==0.7.20",
    "langchain-mcp-adapters==0.2.1",
]

[tool.uv]
dev-dependencies = ["jupyter==1.1.1"]
