[project]
name = "llm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "langchain>=1.2.14",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.23",
    "langgraph>=1.1.4",
    "langsmith>=0.7.23",
    "openevals>=0.1.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "langsmith-fetch>=0.3.1",
    "mypy>=1.20.0",
    "ruff>=0.15.8",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # docstring rules
    "ANN",     # type annotation enforcement
    "TRY",     # tryceratops
    "EM",      # error message style
    "FA",      # future-annotations
    "SIM108",  # ternary operator
    "S101",    # assert usage
    "RET505",  # else-return
    "COM812",  # trailing comma (conflicts with formatter)
    "TC001",   # type-checking import (first-party)
    "TC002",   # type-checking import (third-party)
    "RUF001",  # ambiguous unicode (fullwidth Japanese chars)
    "E501",    # line too long (Japanese text; formatter handles code)
    "T201",    # print (used in eval CLI scripts)
    "PTH123",  # Path.open() preference
    "RET504",  # unnecessary assignment before return
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
